@@ -5,6 +5,11 @@ Links
 - [Netzwerk Protokoll Repo](https://lab.it.hs-hannover.de/tcm-ss5-u1/progpr22-23-api)
 - [Academic Cloud Ordner](https://sync.academiccloud.de/index.php/apps/files/?dir=/ProgProj2223)
 
+## notes
+- run jar from pool-pc: /usr/lib/jvm/jdk-17.0.1/bin/java -jar --module-path lib/lib --add-modules javafx.controls,javafx.fxml,javafx.media -Dprism.dirtyopts=false out/artifacts/gruppe07_jar/gruppe07.jar
+- javafx params: --module-path lib/lib --add-modules javafx.controls,javafx.fxml,javafx.media
+
+
 ## ToDo - bis 07.12
 
 ### geordnet nach prioritaet
